Revision history for CourtIO-Pod-OpenAPI

{{$NEXT}}

"0.02  2020-04-02"
  - Don't include "paths" key in the output.

"0.01  2020-03-31"
  - Initial version