@@ -1,6 +1,8 @@
 Revision history for CourtIO-Pod-OpenAPI
 
 {{$NEXT}}
+  - Sort paths in output by path name.  YAML spec of each path is still in
+    "preserve order" mode
 
 "0.02  2020-04-02"
   - Don't include "paths" key in the output.
